2010-04-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot.py: Fixed a ambiguous column name bug (id -> P.id).
	* actors.py (Texture): Fixed a bug of texture show/hide behaviour.

2010-04-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr/api.py: Improved code for certification.
	* flickr/authdialog.py (PluginFlickrDialog): Added a black magic
	  for avoiding unintended GC for sub instances.

2010-04-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoimageclutter.py, actors.py, animation.py: Improved icon
	  animation on fullscreen.

2010-04-02  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoimageclutter.py: Added support fade-in/out animation in
	  fullscreen mode.

2010-04-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoimageclutter.py: Added GConf notify for UI.  Fixed bugs.
	  Code refactoring.

2010-03-31  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoimageclutter.py: Added support for clutter icon animations.
	* photoimageclutter.py, photoframe.py: Fixed clutter icons
	  show/hide behavior.

2010-03-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoliststore.py, photoframe.py: Fixed interval time in screen
	  saver mode.
	* photoimageclutter.py, photoframe.py: Added clutter support on
	  screen saver mode.

2010-03-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoimageclutter.py, photoframe.py: Added clutter support on
	  fullscreen mode.

2010-03-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr/__init__.py, photoimagegtk.py: Improved the support for
	  large or original Flickr photos in fullscreen mode.

2010-03-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* base.py, flickr/__init__.py: Added support for large or original
	  Flickr photos in fullscreen mode.

2010-03-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr/__init__.py, api.py: Added support for page argument on
	  Flickr API.  Added support original image url.

2010-03-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
